--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 <body>
   <div class="container">
     <header>
-      <img class="header-image" src="C:\Users\Lovely\Documents\the awakening\header.png" alt="Header Image">
+      <img class="header-image" src="header.png" alt="Header Image">
     </header>
     <h1>Thank You for Downloading "The Awakening: Unveiling Your True Potential" by LN. Lena</h1>
-    <img class="mockup-image" src="C:\Users\Lovely\Documents\the awakening\The Awakening book.png" alt="Mockup Image" />
+    <img class="mockup-image" src="The Awakening book.png" alt="Mockup Image" />
     <p>
       Thank you for downloading "The Awakening: Unveiling Your True Potential" by LN. Lena. We hope this eBook provides valuable insights and helps you unlock your true potential.
     </p>
